--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> a deck to take you beyond npm install",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "live-server ./"
   },
   "repository": {
     "type": "git",
